Saturday, 24th January 2004, Al Riddoch <alriddoch@zepler.org>

	* Eris/UIFactory.h, test/testUtils.cpp: Move cassert includes
	  around a bit, for fun and profit.

Thursday, 22nd January 2004, Al Riddoch <alriddoch@zepler.org>

	* Eris/Exceptions.h Eris/Exceptions.cpp: New files to contain
	  exception class declarations and definitions.

	* Eris/Types.h: Remove exceptions, and clean up types.

	* Re-organise includes to use new exceptions header.

Thursday, 22th January, Ron Steinke <rsteinke@w-link.net>

	* Remove ::Instantiate() calls from test/*

Thursday, 22nd January 2004, James Turner <james@worldforge.org>

    * Remove use of deprecated ::Instantiate() calls
    * Require Atlas-C++ 0.4.93 (latest transitional)

Thursday, 22nd January 2004, Al Riddoch <alriddoch@zepler.org>

	* Eris/typeService.cpp: Update type service to use Atlas-C++
	  Class() method, as default constructor now creates an instance.

Monday, 19th January 2004, Al Riddoch <alriddoch@zepler.org>

	* Many more include fixups, mostly relating to sigc++.

Sunday, 18th January, Ron Steinke <rsteinke@w-link.net> (don't you love time zones?)

	* test/testPlayer.cpp: Added an #include so the tests build again.

Monday, 19th January 2004, Al Riddoch <alriddoch@zepler.org>

	* Reorder includes, and elimate unnecessary includes by using
	  forward declarations throughout.

Sunday, 18th January, Ron Steinke <rsteinke@w-link.net>

	* Eris/Avatar.*: Renamed the move() functions to
	  moveToPoint() and moveInDirection() to avoid
	  the Point/Vector argument overload.

Sunday, 18th January, James Turner <james@worldforge.org>

	* Patch from Ron Steinke : make Factory.h use forward declared Atlas
	  types, to avoid dragging in huge chunks of Atlas::Objects and all the
	  Atlas::Mesage stuff.

Saturday, 17th January, Ron Steinke <rsteinke@w-link.net>

	* Eris/Avatar.*: Added velocity-based move() methods.

Sunday, 11th January, Ron Steinke <rsteinke@w-link.net>
