@@ -1,3 +1,15 @@
+Thursday, 5th February 2004, James Turner
+
+    * Fix duplicate characters in the Player's list, by discarding
+      duplicate SIGHTs and locking out calls to refreshCharacterInfo while
+      a refresh is already in progress
+    * Switch the internal character storage to be a map, keyed by entity ID,
+      and make the accessor method (Player::getCharacters()) return a
+      const reference.
+    * Various other whitespace changes in Player.cpp
+    * Bump version to 1.1.1 in anticipation of release
+    * Set required WFMath version to 0.3.3 for coordinate conversion helpers
+    
 Saturday, 24th January 2004, Al Riddoch <alriddoch@zepler.org>
 
 	* Eris/UIFactory.h, test/testUtils.cpp: Move cassert includes
